fix safari img stretch

--- a/css/home.css
+++ b/css/home.css
@@ -115,6 +115,7 @@ img.logo {
 	max-height: 60%;
 	position: relative;
 	display: flex;
+	align-items: flex-start;
 	justify-content: space-evenly;
 }
 .gallery p {
